force-app/main/default/objects/animalos__Job__c/fields/aos_Other_Capture_Methods__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Capture_Methods__c</fullName>
    <label>Other Capture Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hand Net Technique</fullName>
            </value>
            <value>
                <fullName>Net Launcher</fullName>
            </value>
            <value>
                <fullName>Hand Capture</fullName>
            </value>
            <value>
                <fullName>D-Net</fullName>
            </value>
            <value>
                <fullName>Loop Snare/ Hand Snare</fullName>
            </value>
            <value>
                <fullName>Crate Trap</fullName>
            </value>
            <value>
                <fullName>Other (Please specify in Job Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>