force-app/main/default/objects/animalos__Job__c/fields/aos_Other_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Formula</label>
    <type>Checkbox</type>
</CustomField>