force-app/main/default/objects/animalos__Job__c/fields/aos_Other_prohibited_reg_conduct_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_prohibited_reg_conduct_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Other prohibited &amp; regulated conduct&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other prohibited &amp; reg conduct Formula</label>
    <type>Checkbox</type>
</CustomField>