force-app/main/default/objects/animalos__Job__c/fields/aos_Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Outcome_Reason__c</fullName>
    <label>Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Job_Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Animal self-rescued</fullName>
            </value>
            <value>
                <fullName>Caller took to vet</fullName>
            </value>
            <value>
                <fullName>Other agency rescued</fullName>
            </value>
            <value>
                <fullName>Animal assessed and left in field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>