force-app/main/default/objects/animalos__Job__c/fields/aos_Overcrowded_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Overcrowded_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Overcrowded&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overcrowded Formula</label>
    <type>Checkbox</type>
</CustomField>