force-app/main/default/objects/animalos__Job__c/fields/aos_Parent_Area__c.field-meta.xml
<CustomField>
    <fullName>aos_Parent_Area__c</fullName>
    <formula>animalos__Area__r.animalos__Parent_Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Area</label>
    <type>Text</type>
</CustomField>