force-app/main/default/objects/animalos__Job__c/fields/aos_Person_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>aos_Person_Of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Of Interest</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs (Person Of Interest)</relationshipLabel>
    <relationshipName>aos_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>