force-app/main/default/objects/animalos__Job__c/fields/aos_Pet_Shop_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Pet_Shop_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Pet Shop&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pet Shop Formula</label>
    <type>Checkbox</type>
</CustomField>