force-app/main/default/objects/animalos__Job__c/fields/aos_POI_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_POI_Registration_Number__c</fullName>
    <label>POI Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>