force-app/main/default/objects/animalos__Job__c/fields/aos_Poisoning_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Poisoning_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Poisoning&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poisoning Formula</label>
    <type>Checkbox</type>
</CustomField>