force-app/main/default/objects/animalos__Job__c/fields/aos_Police_Attended_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Police_Attended_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Attended Location</label>
    <type>Checkbox</type>
</CustomField>