force-app/main/default/objects/animalos__Job__c/fields/aos_Police_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Police_Case_Number__c</fullName>
    <label>Police Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>