force-app/main/default/objects/animalos__Job__c/fields/aos_Poor_Condition_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Poor_Condition_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Poor Condition&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poor Condition Formula</label>
    <type>Checkbox</type>
</CustomField>