force-app/main/default/objects/animalos__Job__c/fields/aos_Postcode__c.field-meta.xml
<CustomField>
    <fullName>aos_Postcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postcode</label>
    <referenceTo>aos_Postcode__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>aos_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>