force-app/main/default/objects/animalos__Job__c/fields/aos_Premises_Inspection_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Premises_Inspection_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Premises Inspection&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premises Inspection Formula</label>
    <type>Checkbox</type>
</CustomField>