force-app/main/default/objects/animalos__Job__c/fields/aos_Previous_History_with_NSW_Police__c.field-meta.xml
<CustomField>
    <fullName>aos_Previous_History_with_NSW_Police__c</fullName>
    <label>Previous History with NSW Police</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>