force-app/main/default/objects/animalos__Job__c/fields/aos_Prohibited_devices_items_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Prohibited_devices_items_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Prohibited devices &amp; items&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prohibited devices &amp; items Formula</label>
    <type>Checkbox</type>
</CustomField>