force-app/main/default/objects/animalos__Job__c/fields/aos_Prohibited_Order_Breach_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Prohibited_Order_Breach_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Prohibited Order Breach&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prohibited Order Breach Formula</label>
    <type>Checkbox</type>
</CustomField>