force-app/main/default/objects/animalos__Job__c/fields/aos_Prohibited_Surgical_Procedure__c.field-meta.xml
<CustomField>
    <fullName>aos_Prohibited_Surgical_Procedure__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Prohibited Surgical procedures&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prohibited Surgical Procedure Formula</label>
    <type>Checkbox</type>
</CustomField>