force-app/main/default/objects/animalos__Job__c/fields/aos_Recommended_Equipment__c.field-meta.xml
<CustomField>
    <fullName>aos_Recommended_Equipment__c</fullName>
    <label>Recommended Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>