force-app/main/default/objects/animalos__Job__c/fields/aos_Recommended_Time_to_Attend__c.field-meta.xml
<CustomField>
    <fullName>aos_Recommended_Time_to_Attend__c</fullName>
    <label>Recommended Time to Attend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>