force-app/main/default/objects/animalos__Job__c/fields/aos_Reported_Violence_Detail__c.field-meta.xml
<CustomField>
    <fullName>aos_Reported_Violence_Detail__c</fullName>
    <label>Reported Violence Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>