force-app/main/default/objects/animalos__Job__c/fields/aos_Req_Rescue_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Req_Rescue_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Req Rescue&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Req Rescue Formula</label>
    <type>Checkbox</type>
</CustomField>