force-app/main/default/objects/animalos__Job__c/fields/aos_Rescue_Group_Options__c.field-meta.xml
<CustomField>
    <fullName>aos_Rescue_Group_Options__c</fullName>
    <label>Rescue Group Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>