force-app/main/default/objects/animalos__Job__c/fields/aos_Riding_Sch_Insp_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Riding_Sch_Insp_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Riding Sch Insp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Riding Sch Insp Formula</label>
    <type>Checkbox</type>
</CustomField>