force-app/main/default/objects/animalos__Job__c/fields/aos_Rodeo_Insp_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Rodeo_Insp_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Rodeo Insp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rodeo Insp Formula</label>
    <type>Checkbox</type>
</CustomField>