force-app/main/default/objects/animalos__Job__c/fields/aos_Sale_Yard_Insp_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Sale_Yard_Insp_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Sale Yard Insp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Yard Insp Formula</label>
    <type>Checkbox</type>
</CustomField>