force-app/main/default/objects/animalos__Job__c/fields/aos_Second_Hand__c.field-meta.xml
<CustomField>
    <fullName>aos_Second_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Hand</label>
    <type>Checkbox</type>
</CustomField>