force-app/main/default/objects/animalos__Job__c/fields/aos_Shelter_Inadequate_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Shelter_Inadequate_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Shelter Inadequate&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shelter Inadequate Formula</label>
    <type>Checkbox</type>
</CustomField>