force-app/main/default/objects/animalos__Job__c/fields/aos_Sheltermate_User__c.field-meta.xml
<CustomField>
    <fullName>aos_Sheltermate_User__c</fullName>
    <label>Sheltermate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>