force-app/main/default/objects/animalos__Job__c/fields/aos_Source__c.field-meta.xml
<CustomField>
    <fullName>aos_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Veterinary Surgery, External</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Wildcare/other Wildlife Org</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Rspca Inspectorate</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Qld Police Service</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Local Government</fullName>
            </value>
            <value>
                <fullName>Message Bank</fullName>
            </value>
            <value>
                <fullName>Rspca Shelter, Dakabin</fullName>
            </value>
            <value>
                <fullName>Rspca Administration</fullName>
            </value>
            <value>
                <fullName>Rspca Shelter, Regional</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Other</fullName>
            </value>
            <value>
                <fullName>Rspca Wildlife Dept.</fullName>
            </value>
            <value>
                <fullName>Rspca Veterinary Services</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Dept. Primary Industries &amp; Fisheries</fullName>
            </value>
            <value>
                <fullName>Animal Welfare League</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Dept. Housing</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Spca/other Animal Welfare Org</fullName>
            </value>
            <value>
                <fullName>Vet</fullName>
            </value>
            <value>
                <fullName>Rspca Shelter, Fairfield</fullName>
            </value>
            <value>
                <fullName>Rspca Volunteers</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Qld Govt, Qld Health</fullName>
            </value>
            <value>
                <fullName>General Dispatch Request</fullName>
            </value>
            <value>
                <fullName>Qld Govt. Dept. Emergency Services</fullName>
            </value>
            <value>
                <fullName>Crime Stoppers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>