force-app/main/default/objects/animalos__Job__c/fields/aos_Stable_Insp_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Stable_Insp_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Stable Insp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stable Insp Formula</label>
    <type>Checkbox</type>
</CustomField>