force-app/main/default/objects/animalos__Job__c/fields/aos_Status_Points__c.field-meta.xml
<CustomField>
    <fullName>aos_Status_Points__c</fullName>
    <formula>CASE(
    aos_Sub_Status__c,
    &quot;Attended - CC left&quot;, 3,
    &quot;Attended – enquires continuing&quot;, 1,
    &quot;Awaiting AWD Compliance Check&quot;, 2,
    &quot;Awaiting Attendance&quot;, 3,
    &quot;Awaiting Recheck&quot;, 1,
    &quot;Covering Inspector -Assigned&quot;, 4,
    &quot;Covering Inspector – Awaiting Attendance&quot;, 3,
    &quot;Covering Inspector – Preliminary Enquiries Made&quot;, 3,
    &quot;Notes outstanding&quot;, 1,
    &quot;Pending Forfeiture Application&quot;, 1,
    &quot;Pending Forfeiture decision&quot;, 0,
    &quot;Pending FBOE&quot;, 1,
    &quot;Pending FBOE Application Decision&quot;, 0,
    &quot;Preliminary inquiries made&quot;, 3,
    &quot;Prosecution Commenced&quot;, 0,
    &quot;Trap Set&quot;, 0,

    /* If no Sub_Status__c match, check animalos__Status__c */
    CASE(
        animalos__Status__c,
        &quot;Assigned&quot;, 4,
        &quot;Awaiting Assignment&quot;, 0,
        &quot;Finalised&quot;, 0,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>