force-app/main/default/objects/animalos__Job__c/fields/aos_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Recheck</fullName>
            </value>
            <value>
                <fullName>Pending Prosecution</fullName>
            </value>
            <value>
                <fullName>Awaiting Notification Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Further Information</fullName>
            </value>
            <value>
                <fullName>Attended – CC left</fullName>
            </value>
            <value>
                <fullName>Attended – enquires continuing</fullName>
            </value>
            <value>
                <fullName>Awaiting AWD Compliance Check</fullName>
            </value>
            <value>
                <fullName>Covering Inspector - Assigned</fullName>
            </value>
            <value>
                <fullName>Covering Inspector – Awaiting Attendance</fullName>
            </value>
            <value>
                <fullName>Covering Inspector – Preliminary Enquiries Made</fullName>
            </value>
            <value>
                <fullName>Notes outstanding</fullName>
            </value>
            <value>
                <fullName>Pending Forfeiture Application</fullName>
            </value>
            <value>
                <fullName>Pending Forfeiture decision</fullName>
            </value>
            <value>
                <fullName>Pending FBOE</fullName>
            </value>
            <value>
                <fullName>Pending FBOE Application Decision</fullName>
            </value>
            <value>
                <fullName>Preliminary inquiries made</fullName>
            </value>
            <value>
                <fullName>Prosecution Commenced</fullName>
            </value>
            <value>
                <fullName>Trap Set</fullName>
            </value>
            <value>
                <fullName>Caller Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>