force-app/main/default/objects/animalos__Job__c/fields/aos_Supporting_Documentation_Warning__c.field-meta.xml
<CustomField>
    <fullName>aos_Supporting_Documentation_Warning__c</fullName>
    <label>Supporting Documentation Warning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violence</fullName>
            </value>
            <value>
                <fullName>Sexualised content</fullName>
            </value>
            <value>
                <fullName>Graphic injuries such as death of an animal</fullName>
            </value>
            <value>
                <fullName>Presence of children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>