force-app/main/default/objects/animalos__Job__c/fields/aos_Sync_with_Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>aos_Sync_with_Case_Priority__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync with Case Priority</label>
    <type>Checkbox</type>
</CustomField>