force-app/main/default/objects/animalos__Job__c/fields/aos_Tied_Continually_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Tied_Continually_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Tied Continually&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tied Continually Formula</label>
    <type>Checkbox</type>
</CustomField>