force-app/main/default/objects/animalos__Job__c/fields/aos_Time_Of_Day_Sighted__c.field-meta.xml
<CustomField>
    <fullName>aos_Time_Of_Day_Sighted__c</fullName>
    <label>Time Of Day Sighted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>