force-app/main/default/objects/animalos__Job__c/fields/aos_Transport_Unsatisfactory_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Transport_Unsatisfactory_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Transport Unsatisfactory&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Unsatisfactory Formula</label>
    <type>Checkbox</type>
</CustomField>