force-app/main/default/objects/animalos__Job__c/fields/aos_Type_Of_Food__c.field-meta.xml
<CustomField>
    <fullName>aos_Type_Of_Food__c</fullName>
    <label>Type Of Food</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>