force-app/main/default/objects/animalos__Job__c/fields/aos_Vet__c.field-meta.xml
<CustomField>
    <fullName>aos_Vet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>