force-app/main/default/objects/animalos__Job__c/fields/aos_Vet_Treatment_Formula__c.field-meta.xml
<CustomField>
    <fullName>aos_Vet_Treatment_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Vet Treatment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vet Treatment Formula</label>
    <type>Checkbox</type>
</CustomField>