force-app/main/default/objects/animalos__Job__c/fields/aos_Violence_Warning__c.field-meta.xml
<CustomField>
    <fullName>aos_Violence_Warning__c</fullName>
    <label>Violence Warning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>