force-app/main/default/objects/animalos__Job__c/fields/Behaviour_Around_MOP__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Around_MOP__c</fullName>
    <label>Behaviour Around MOP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>