force-app/main/default/objects/animalos__Job__c/fields/Bushfire_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bushfire_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Bushfire&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bushfire Formula</label>
    <type>Checkbox</type>
</CustomField>