force-app/main/default/objects/animalos__Job__c/fields/Caller_Frequents_Area__c.field-meta.xml
<CustomField>
    <fullName>Caller_Frequents_Area__c</fullName>
    <label>Caller Frequents Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Once Per Week</fullName>
            </value>
            <value>
                <fullName>Several Times Per Week</fullName>
            </value>
            <value>
                <fullName>Everyday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>