force-app/main/default/objects/animalos__Job__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Jobs_AnimalOS</relationshipName>
    <type>Lookup</type>
</CustomField>