force-app/main/default/objects/animalos__Job__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs (AnimalOS)</relationshipLabel>
    <relationshipName>Jobs_AnimalOS</relationshipName>
    <type>Lookup</type>
</CustomField>