force-app/main/default/objects/animalos__Job__c/fields/Dead_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dead_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Dead&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dead Formula</label>
    <type>Checkbox</type>
</CustomField>