force-app/main/default/objects/animalos__Job__c/fields/Directions_to_Property__c.field-meta.xml
<CustomField>
    <fullName>Directions_to_Property__c</fullName>
    <label>Directions to Property</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>