force-app/main/default/objects/animalos__Job__c/fields/Dog_Fighting_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dog_Fighting_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Dog Fighting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dog Fighting Formula</label>
    <type>Checkbox</type>
</CustomField>