force-app/main/default/objects/animalos__Job__c/fields/Entanglement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entanglement_Type__c</fullName>
    <label>Entanglement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>