force-app/main/default/objects/animalos__Job__c/fields/Exercise_Inadequate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Inadequate_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Exercise Inadequate&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercise Inadequate Formula</label>
    <type>Checkbox</type>
</CustomField>