force-app/main/default/objects/animalos__Job__c/fields/External_Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Referral_Number__c</fullName>
    <label>External Referral Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>