force-app/main/default/objects/animalos__Job__c/fields/Feeding_Routine__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Routine__c</fullName>
    <label>Feeding Routine</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>