force-app/main/default/objects/animalos__Job__c/fields/Feedlot_Insp_Formula__c.field-meta.xml
<CustomField>
    <fullName>Feedlot_Insp_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Feedlot Insp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedlot Insp Formula</label>
    <type>Checkbox</type>
</CustomField>