force-app/main/default/objects/animalos__Job__c/fields/First_Job_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Job_Owner__c</fullName>
    <description>For Contact Centre job List Views</description>
    <formula>CASESAFEID(Case__r.OwnerId) = CASESAFEID($User.Id)</formula>
    <label>First Job Owner</label>
    <type>Checkbox</type>
</CustomField>