force-app/main/default/objects/animalos__Job__c/fields/Flighted_Bird_Formula__c.field-meta.xml
<CustomField>
    <fullName>Flighted_Bird_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Flighted Bird&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flighted Bird Formula</label>
    <type>Checkbox</type>
</CustomField>