force-app/main/default/objects/animalos__Job__c/fields/Food_Water_Formula__c.field-meta.xml
<CustomField>
    <fullName>Food_Water_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Food &amp; Water&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food &amp; Water Formula</label>
    <type>Checkbox</type>
</CustomField>