force-app/main/default/objects/animalos__Job__c/fields/Greyhound_Complaint_Formula__c.field-meta.xml
<CustomField>
    <fullName>Greyhound_Complaint_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Greyhound Complaint&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greyhound Complaint Formula</label>
    <type>Checkbox</type>
</CustomField>