force-app/main/default/objects/animalos__Job__c/fields/Heat_Distress_Formula__c.field-meta.xml
<CustomField>
    <fullName>Heat_Distress_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Heat Distress&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heat Distress Formula</label>
    <type>Checkbox</type>
</CustomField>